[package]
name = "rpg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"

[dependencies.aes]
path = "lib/aes"

[dependencies.base64]
path = "lib/base64"

[workspace]
members = [
    "lib/aes",
    "lib/base64",
    "tests/constant-time",
]
